# hypermorph

./: CNAME  CONTRIBUTING.md  MANIFEST.in  README  README.md  clean_build.sh  index.html  setup.cfg  setup_without_cfg.py
doc/: conf.py  generate_documentation.sh  modules.rst
docs/: .buildinfo  hypermorph.html  objects.inv  searchindex.js
docs/_sources/: hypermorph.rst.txt  index.rst.txt
hypermorph/: __init__.py  clients.py  connector_clickhouse_driver.py  connector_mysql.py  connector_sqlalchemy.py  data_graph.py  data_graph_hyperatom.py  data_graph_hyperbond.py  data_graph_link.py  data_graph_node.py  data_pipe.py  draw_hypergraph.py  exceptions.py  hacol.py  hacol_pipe.py  haset.py  haset_pipe.py  hassoc.py  mis.py  requirements_conda.txt  requirements_pip.txt  schema.py  schema_dms_attribute.py  schema_dms_datamodel.py  schema_dms_entity.py  schema_drs_dataset.py  schema_drs_field.py  schema_drs_graph_datamodel.py  schema_drs_graph_schema.py  schema_drs_table.py  schema_link.py  schema_node.py  schema_pipe.py  schema_sys.py  test.py  utils.py
hypermorph/demo/: add_aset_from_additional_data_resource.py  add_resources.py  operations_aset.py  operations_data.py  operations_schema.py  video_scenario.py
hypermorph/test_modules/: association.py  clients__connections.py  clients_clickhouse_driver.py  clients_mysql_connector.py  clients_sqlalchemy_clickhouse.py  clients_sqlalchemy_pymysql.py  clients_sqlalchemy_sqlite.py  draw_hypergraph_IHyperGraphPlotter.py  mis.get_metadata.py  mis_add_datamodel_with_commands.py  mis_add_dataset_with_commands.py  schema_get.py  (+11 more)
(+33 files in other folders)
