[metadata]

name = hypermorph
version = 0.1.2

author = Athanassios I. Hatzis
author_email = hatzis@healis.eu

description = HyperMorph - operational API for information management and data transformations-analytics
long_description = HyperMorph - operational API for information management and data transformations-analytics
license = Default license AGPL
license_files = LICENSE.txt

url = http://localhost:1313/en/__hypermorph/

keywords =
    api
    database
    database management system
    application programming interface
	associative engine
	analytics
	framework
	graph database
	information analysis
	information management
	transformation

platforms = Linux

classifiers=
	Development Status :: 3 - Alpha
	Environment :: Console
	Environment :: Web Environment
	Framework :: IPython
	Framework :: Jupyter
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries :: Application Frameworks
	Topic :: Database :: Database Engines/Servers
	Topic :: Database :: Front-Ends	
	Topic :: Scientific/Engineering :: Information Analysis


[options]
include_package_data = True
packages = find:
python_requires = >= 3.8

[options.extras_require]
